# CS311

./: .gitignore  README.md  agent.ipynb  agent.py  agent_api.py  docker-compose.ci.yml  interview_agent.py  main.ipynb  main.py  pyproject.toml  requirements.txt  start_all.bat  start_backend.bat  start_frontend.bat  tools_ocr.ipynb
.github/workflows/: ci-staging.yml  deploy-prod.yml  deploy-staging.yml  release-version.yml  rollback.yml
backend/: .dockerignore  .gitignore  Dockerfile  agent_api.py  api.py  interview_api.py  requirements.txt  tools_ocr.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.jsx  InterviewTab.jsx  index.css  main.jsx
