[project]
name = "smart-resume-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.124.4",
    "langchain>=1.1.3",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "protobuf>=6.33.2",
    "pymupdf>=1.26.7",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "sentencepiece>=0.2.1",
    "streamlit>=1.52.1",
    "tavily-python>=0.7.15",
    "uvicorn[standard]>=0.38.0",
]
